k8s/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-ecommerce-nodeport
spec:
  type: NodePort
  selector:
    app: django-ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
