k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-ecommerce-service
  labels:
    app: django-ecommerce
spec:
  type: ClusterIP
  selector:
    app: django-ecommerce
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
