k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ecommerce-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: django-ecommerce.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-ecommerce-service
                port:
                  number: 80
